force-app/main/default/objects/CM_Account_Team_History__c/CM_Account_Team_History__c.object-meta.xml
<CustomObject>
    <label>NA Sales Team History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NA Sales Team History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>