force-app/main/default/objects/CM_Account_Team_History__c/fields/Account_Firm__c.field-meta.xml
<CustomField>
    <fullName>Account_Firm__c</fullName>
    <label>Company/Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NA Sales Team History</relationshipLabel>
    <relationshipName>CM_Account_Team_Historys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>