force-app/main/default/objects/CM_Account_Team_History__c/fields/Account_Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Firm_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company/Firm Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>