force-app/main/default/objects/CM_Account_Team_History__c/fields/Case_Management_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Management_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Management End Date</label>
    <type>Date</type>
</CustomField>