force-app/main/default/objects/CM_Account_Team_History__c/fields/Data_Import_Version__c.field-meta.xml
<CustomField>
    <fullName>Data_Import_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Import Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>