force-app/main/default/objects/CM_Account_Team_History__c/fields/IsVPCR__c.field-meta.xml
<CustomField>
    <fullName>IsVPCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVPCR</label>
    <type>Checkbox</type>
</CustomField>