force-app/main/default/objects/CM_Account_Team_History__c/fields/SCE_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>SCE_Email_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCE Email ID</label>
    <type>Email</type>
</CustomField>