force-app/main/default/objects/CM_Account_Team_History__c/fields/SCE_Player_Coach_Assigned_to_Case__c.field-meta.xml
<CustomField>
    <fullName>SCE_Player_Coach_Assigned_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCE Player\Coach Assigned to Case</label>
    <type>Checkbox</type>
</CustomField>