force-app/main/default/objects/CM_Account_Team_History__c/fields/Survey_Validated_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Validated_Date_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Validated Date/time</label>
    <type>DateTime</type>
</CustomField>