force-app/main/default/objects/CM_Account_Team_History__c/fields/User_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Row_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Row Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>