force-app/main/default/objects/CM_Account_Team_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CASESAFEID__c</columns>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Account_Firm__c</columns>
    <columns>Role__c</columns>
    <columns>Case_Management_Start_Date__c</columns>
    <columns>Case_Management_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>